# blueking-dbm

./: .code.yml  .dockerignore  .gitignore  .gtmproject.yaml  .pre-commit-config.yaml  LICENSE  build.yml  readme.md  readme_en.md
dbm-ui/: .coveragerc  .gitignore  .pylintrc  DBM_README.md  Dockerfile  Procfile  app_desc.yaml  build.yml  manage.py  package.json  pyproject.toml  pytest.ini  requirements.txt  requirements310.txt  requirements36.txt  wsgi.py
dbm-ui/backend/: .flake8  __init__.py  asgi.py  constants.py  exceptions.py  urls.py
dbm-ui/backend/bk_dataview/: README.md  __init__.py  bkdbm.ini
dbm-ui/backend/bk_web/: apps.py  constants.py  exceptions.py  handlers.py  middleware.py  models.py  pagination.py  renderers.py  serializers.py  swagger.py  viewsets.py
dbm-ui/backend/components/: __init__.py  base.py  bk.py  constants.py  domains.py  exception.py  proxy_api.py
dbm-ui/backend/configuration/: admin.py  apps.py  constants.py  exceptions.py  mock_data.py  serializers.py  urls.py
dbm-ui/backend/core/: consts.py  exceptions.py  urls.py
dbm-ui/backend/db_dirty/: admin.py  apps.py  constants.py  filters.py  handlers.py  mock.py  models.py  serializers.py  urls.py  views.py
dbm-ui/backend/db_event/: __init__.py  apps.py  readme.md  serializers.py  urls.py
dbm-ui/backend/db_meta/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  meta_validator.py  readme.md  signals.py  tasks.py  urls.py  utils.py
dbm-ui/backend/db_monitor/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  mock_data.py  models.py  readme.md  serializers.py  tasks.py  urls.py  utils.py
dbm-ui/backend/db_package/: admin.py  apps.py  constants.py  exceptions.py  filters.py  models.py  serializers.py  urls.py  views.py
dbm-ui/backend/db_periodic_task/: admin.py  apps.py  constants.py  models.py  readme.md  util.py  utils.py
dbm-ui/backend/db_proxy/: admin.py  apps.py  constants.py  exceptions.py  models.py  nginxconf_tpl.py  tasks.py  urls.py
dbm-ui/backend/db_report/: ReadMe.md  apps.py  database_router.py  mock_data.py  report_basemodel.py  report_baseview.py  urls.py
dbm-ui/backend/dbm_init/: apps.py  constants.py  readme.md  services.py
dbm-ui/backend/dbm_tools/: apps.py  readme.md
dbm-ui/backend/django_dbconn_retry/: __init__.py  apps.py
dbm-ui/backend/docs/: autofix_readme.md
dbm-ui/backend/env/: __init__.py  apigw_domains.py  apm.py  bklog.py  bkrepo.py  db_extention.py  dev.py  nameservice.py
dbm-ui/backend/flow/: README.md  __init__.py  admin.py  apps.py  consts.py  models.py  urls.py
dbm-ui/backend/homepage/: views.py
dbm-ui/backend/iam_app/: admin.py  apps.py  constans.py  exceptions.py  mock_data.py  serializers.py  urls.py
dbm-ui/backend/redis_dts/: apps.py  views.py
dbm-ui/backend/tests/: conftest.py  constants.py  单元测试开发规范.md
dbm-ui/backend/ticket/: admin.py  apps.py  constants.py  contexts.py  exceptions.py  exclusive_ticket.xlsx  filters.py  handler.py  mock_data.py  readme.md  serializers.py  signals.py  urls.py  views.py  yasg_slz.py
dbm-ui/backend/utils/: basic.py  batch_request.py  cache.py  enum.py  env.py  excel.py  files.py  http.py  local.py  log.py  md5.py  profile.py  pytest.py  redis.py  string.py  time.py
dbm-ui/backend/version_log/: apps.py  config.py  decorators.py  middleware.py  models.py  urls.py  utils.py  views.py
dbm-ui/blue_krill/data_types/: __init__.py  enum.py
dbm-ui/blueking/component/: __init__.py  base.py  client.py  collections.py  conf.py  constants.py  exceptions.py  shortcuts.py  utils.py
dbm-ui/config/: __init__.py  ci.py  default.py  dev.py  prod.py  stag.py
dbm-ui/etc/: gunicorn.py
dbm-ui/frontend/: .env.production  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .stylelintignore  .stylelintrc.js  README.md  auto-copyright.js  babel.config.js  bkuiVueResolver.ts  commitlint.config.js  components.d.ts  env.d.ts  index.html  package.json  tsconfig.json  vite.config.mts  vite.config.ts
dbm-ui/frontend/.husky/: commit-msg  commit-msg-bkcodeai  pre-commit  (+2 more)
dbm-ui/release/: README.md  V1.0.0_20230424.md  V1.2.0_20231001.md  V1.3.0-alpha.13_20231204.md  V1.3.0-alpha.14_20231205.md  V1.3.0-alpha.15_20231207.md  V1.3.0-alpha.16_20231207.md  V1.3.0-alpha.17_20231210.md  V1.3.0-alpha.18_20231211.md  V1.3.0-alpha.19_20231211.md  V1.3.0-alpha.20_20231212.md  V1.3.0-alpha.21_20231213.md  V1.3.0-alpha.22_20231216.md  V1.3.0_20231201.md
dbm-ui/scripts/: make_ssl_pairs.sh
dbm-ui/version_logs_html/: V1.0.0.html
(+10955 files in other folders)
